--- a/NormalizingWithLeakRateCorrection.ipynb
+++ b/NormalizingWithLeakRateCorrection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "[101 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,8 +248,29 @@
     "\n",
     "# loading the data \n",
     "file_name = os.path.join(path_dir, file_in)\n",
-    "df = pd.read_csv(file_name)\n",
-    "df"
+    "df_leakCorrected = pd.read_csv(file_name)\n",
+    "df_leakCorrected\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NoWOSwMW = df_leakCorrected['runCondition'] == \"NoWindow_OldSw_MetalWall\"\n",
+    "df_leakCorrected_NoWOSwMW = df_leakCorrected[NoWOSwMW]\n",
+    "df_leakCorrected_NoWOSwMW = df_leakCorrected_NoWOSwMW.sort_values(['bField', \"holdTime\"], ascending = (True, True))\n",
+    "df_leakCorrected_NoWOSwMW.to_csv('leakCorrected_NoWOSwMW.csv', index = False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "WWOSwMW = df_leakCorrected['runCondition'] == \"WithWindow_OldSw_MetalWall\"\n",
+    "df_leakCorrected_WWOSwMW = df_leakCorrected[WWOSwMW]\n",
+    "df_leakCorrected_WWOSwMW = df_leakCorrected_WWOSwMW.sort_values(['bField', \"holdTime\"], ascending = (True, True))\n",
+    "\n",
+    "df_leakCorrected_WWOSwMW.to_csv('leakCorrected_WWOSwMW.csv', index = False)\n",
+    "#df_leakCorrected_WWOSwMW.tail(30)"
    ]
   },
   {
